--- a/frontend/src/app/home/components/post-card/components/post-comments/post-comments.html
+++ b/frontend/src/app/home/components/post-card/components/post-comments/post-comments.html
@@ -1,5 +1,5 @@
 <div class="post-comment" (click)="onCommentClick()">
-    <i class="comment-icon">💬</i>
+    <img src="/coffe-comment.png" alt="Comment" class="comment-icon">
     <span class="comment-count">{{post.commentCount}}</span>
     <span class="comment-text">Comments</span>
 </div>
