--- a/frontend/src/app/home/components/post-card/components/post-likes/post-likes.css
+++ b/frontend/src/app/home/components/post-card/components/post-likes/post-likes.css
@@ -17,6 +17,12 @@
   color: var(--color-text);
 }
 
+.like-icon {
+  width: 24px;
+  height: 24px;
+  object-fit: contain;
+}
+
 .post-like button:hover {
   background: var(--color-primary);
   color: var(--color-bg);
